--- a/public/receive.html
+++ b/public/receive.html
@@ -18,7 +18,8 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
-        const socket = io();
+        // Initialize Socket.IO with the server URL
+        const socket = io.connect(window.location.origin);
         const remoteVideo = document.getElementById('remoteVideo');
         const roomCodeDisplay = document.getElementById('roomCode');
         let peerConnection;
