--- a/public/send.html
+++ b/public/send.html
@@ -15,9 +15,11 @@
 </head>
 <body>
     <h1>DirectoABC - Send Screen</h1>
+    <h3>This version is only for non-commercial use. Commercial use is prohibited. If you want to use this software for commercial purposes, please contact directoabc@lucaspeinado.es or use the OTAL version. <a href="https://github.com/lucasengithub/directoabc" target="_blank">GITHUB</a></h3>
+
     <div id="joinForm">
         <input type="text" id="roomInput" placeholder="Enter Room Code" maxlength="6">
-        <button id="joinButton">Join Room</button>
+        <button id="joinButton">Join Screen</button>
     </div>
     <div id="status"></div>
 
