--- a/public/receive.html
+++ b/public/receive.html
@@ -19,7 +19,7 @@
     <div id="status"></div> <!-- Add status display element -->
     <video id="remoteVideo" autoplay playsinline class="hidden"></video>
 
-    <script src="/socket.io/socket.io.js"></script> <!-- Use local Socket.IO -->
+    <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
     <script>
         const statusDisplay = document.getElementById('status'); // Add status element reference
         
