--- a/public/index.html
+++ b/public/index.html
@@ -58,8 +58,8 @@
     <h3>This version is only for non-commercial use. Commercial use is prohibited. If you want to use this software for commercial purposes, please contact directoabc@lucaspeinado.es or use the OTAL version. <a href="https://github.com/lucasengithub/directoabc" target="_blank">GITHUB</a></h3>
 
     <div class="button-container">
-        <a href="/send.html" class="button send-button">Send Screen</a>
-        <a href="/receive.html" class="button receive-button">Receive Screen</a>
+        <a href="/send" class="button send-button">Send Screen</a>
+        <a href="/receive" class="button receive-button">Receive Screen</a>
     </div>
 </body>
 </html>
