--- a/public/receive.html
+++ b/public/receive.html
@@ -13,6 +13,8 @@
 </head>
 <body>
     <h1>DirectoABC - Receive Screen</h1>
+    <h3>This version is only for non-commercial use. Commercial use is prohibited. If you want to use this software for commercial purposes, please contact directoabc@lucaspeinado.es or use the OTAL version. <a href="https://github.com/lucasengithub/directoabc" target="_blank">GITHUB</a></h3>
+
     <div id="roomCode"></div>
     <video id="remoteVideo" autoplay playsinline class="hidden"></video>
 
@@ -22,6 +24,13 @@
         const remoteVideo = document.getElementById('remoteVideo');
         const roomCodeDisplay = document.getElementById('roomCode');
         let peerConnection;
+
+        // Add full screen trigger on video play
+        remoteVideo.addEventListener('play', () => {
+            remoteVideo.requestFullscreen().catch(error => {
+                console.error('Full screen request failed:', error);
+            });
+        });
 
         // Request a room code when page loads
         socket.emit('create-room');
