--- a/public/send.html
+++ b/public/send.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DirectoABC - Send Screen</title>
+    <link rel="stylesheet" href="/css.css">
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 20px; text-align: center; }
+        body { text-align: center; }
         #joinForm { margin: 20px 0; }
-        #roomInput { font-size: 18px; padding: 5px; width: 150px; }
+        #roomInput { font-size: 18px; padding: 5px; width: 150px; font-family: agave, monospace;}
         #joinButton { font-size: 18px; padding: 5px 15px; margin-left: 10px; }
         #status { margin: 20px 0; font-weight: bold; }
         .hidden { display: none; }
@@ -18,7 +19,7 @@
     <h3>This version is only for non-commercial use. Commercial use is prohibited. If you want to use this software for commercial purposes, please contact directoabc@lucaspeinado.es or use the OTAL version. <a href="https://github.com/lucasengithub/directoabc" target="_blank">GITHUB</a></h3>
 
     <div id="joinForm">
-        <input type="text" id="roomInput" placeholder="Enter Room Code" maxlength="6">
+        <input type="text" id="roomInput" placeholder="xxxxxx" maxlength="6">
         <button id="joinButton">Join Screen</button>
     </div>
     <div id="status"></div>
