en algun momento de mi vida, tendré que revisar este codigo vibe y hacerlo mejor, me momento vamos tirando

--- a/public/index.html
+++ b/public/index.html
@@ -55,8 +55,7 @@
 </head>
 <body>
     <h1>DirectoABC</h1>
-    <h3>This version is only for non-commercial use. Commercial use is prohibited. If you want to use this software for commercial purposes, please contact directoabc@lucaspeinado.es or use the OTAL version. <a href="https://github.com/lucasengithub/directoabc" target="_blank">GITHUB</a></h3>
-
+<p id="commercial">This version is only for non-commercial use. Commercial use is prohibited. If you want to use this software for commercial purposes, please contact <a href="mailto:hola@lucaspeinado.es" target="_blank">hola@lucaspeinado.es</a> or use the OTAL commercial version.  See more about this on <a href="https://github.com/lucasengithub/directoabc" target="_blank"></a>GitHub.</p>
     <div class="button-container">
         <a href="/send" class="button send-button">Send Screen</a>
         <a href="/receive" class="button receive-button">Receive Screen</a>
