--- a/public/send.html
+++ b/public/send.html
@@ -16,8 +16,7 @@
 </head>
 <body>
     <h1>DirectoABC - Send Screen</h1>
-    <h3>This version is only for non-commercial use. Commercial use is prohibited. If you want to use this software for commercial purposes, please contact directoabc@lucaspeinado.es or use the OTAL version. <a href="https://github.com/lucasengithub/directoabc" target="_blank">GITHUB</a></h3>
-
+<p id="commercial">This version is only for non-commercial use. Commercial use is prohibited. If you want to use this software for commercial purposes, please contact <a href="mailto:hola@lucaspeinado.es" target="_blank">hola@lucaspeinado.es</a> or use the OTAL commercial version.  See more about this on <a href="https://github.com/lucasengithub/directoabc" target="_blank"></a>GitHub.</p>
     <div id="joinForm">
         <input type="text" id="roomInput" placeholder="xxxxxx" maxlength="6">
         <button id="joinButton">Join Screen</button>
