--- a/public/receive.html
+++ b/public/receive.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DirectoABC - Receive Screen</title>
+    <title>ONDASYSTEM Pantalla - Receive Screen</title>
     <link rel="stylesheet" href="/css.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <section id="rem" class="receive">
         <p id="commercial">This version is only for non-commercial use. Commercial use is prohibited. If you want to use this software for commercial purposes, please contact <a href="mailto:hola@lucaspeinado.es" target="_blank">hola@lucaspeinado.es</a> or use the OTAL commercial version.  See more about this on <a href="https://github.com/lucasengithub/directoabc" target="_blank"></a>GitHub.</p>
         <div class="overcontent">
-            <h1>DirectoABC.XYZ (alpha)</h1>
+            <h1>ONDASYSTEM Pantalla (alpha)</h1>
             <h3 id="roomCode"></h3>
         </div>
         <h2 id="status">Ready to receive.</h2>
