--- a/public/send.html
+++ b/public/send.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DirectoABC - Send Screen</title>
+    <title>ONDASYSTEM Pantalla - Send Screen</title>
     <link rel="stylesheet" href="/css.css">
     <style>
         body { text-align: center; }
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <h1>DirectoABC - Send Screen</h1>
+    <h1>ONDASYSTEM Pantalla - Send Screen</h1>
 <p id="commercial">This version is only for non-commercial use. Commercial use is prohibited. If you want to use this software for commercial purposes, please contact <a href="mailto:hola@lucaspeinado.es" target="_blank">hola@lucaspeinado.es</a> or use the OTAL commercial version.  See more about this on <a href="https://github.com/lucasengithub/directoabc" target="_blank"></a>GitHub.</p>
     <div id="joinForm">
         <input type="text" id="roomInput" placeholder="xxxxxx" maxlength="6">
