feat: add warning, instructions, and instance details
Add a warning section and instructions to the send page, display the current instance on the receive page, and adjust font size in CSS. These changes improve user guidance and clarity.

--- a/public/send.html
+++ b/public/send.html
@@ -21,6 +21,12 @@
         <input type="text" id="roomInput" placeholder="xxxxxx" maxlength="6">
         <button id="joinButton">Join Screen</button>
     </div>
+    <h3>Warning</h3>
+    Alpha software, audio not working.
+    Not available in mobile devices.
+    <h3>Instructions</h3>
+    <p>1. Enter the room code.</p>
+    <p>2. Click "Join Screen" to start streaming this screen.</p>
     <div id="status"></div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/send.js"></script>
