--- a/public/receive.html
+++ b/public/receive.html
@@ -15,6 +15,7 @@
             <h3 id="roomCode"></h3>
         </div>
         <h2 id="status">Ready to receive.</h2>
+        <p id="currentInstance"></p>
         
         <video id="loadingVideo" autoplay preload poster="" loop playsinline muted src="/media/ready.mp4">
             <source src="/media/ready.mp4" type="video/webm">
