--- a/public/send.html
+++ b/public/send.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ONDASYSTEM Pantalla - Send Screen</title>
     <link rel="stylesheet" href="/css.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <style>
         #roomInput { font-size: 18px; font-family: agave, monospace;}
         #status { margin: 20px 0; font-weight: bold; }
@@ -32,6 +33,7 @@
     </section>
     <div id="status"></div>
     <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="/js/send.js"></script>
     </main>
 </body>
