Enhance WebRTC connection handling and diagnostics
- Implemented reconnection logic with a maximum of 3 attempts and timeout management.
- Added multiple STUN/TURN servers for improved connectivity.
- Introduced a connectivity diagnostics function to log browser and WebRTC support details.
- Enhanced connection state monitoring with detailed logging and user notifications.
- Improved error handling for ICE candidates and SDP offers.
- Added a new SVG logo for the application interface.
- Updated the HTML to include the new logo in the header.

--- a/public/receive.html
+++ b/public/receive.html
@@ -11,7 +11,7 @@
 
     <section id="rem" class="receive">
         <div class="overcontent">
-            <h1>ONDAPantalla (alpha)</h1>
+            <h1><img src="media/portada.svg" width="600" alt="ONDAPantalla"></h1>
             <i>by ONDASYSTEM</i>
             <br><br>
             <br><br>
